--- a/templates/user/balance.html
+++ b/templates/user/balance.html
@@ -13,7 +13,7 @@
 					<span>Счет</span>
 				</div>
 				<div class="score">
-					<h3 class="personalArea-title">Баланс:<span>12500 ₽</span></h3>
+					<h3 class="personalArea-title">Баланс:<span>{{ request.user.balance }} ₽</span></h3>
 					<p>Вы можете вывести средства с баланса в любое удобное для вас время. Убедитесь, что вы привязали платежное средство к аккаунту.</p>
 					<a href="#" class="main-btn">Вывести средства</a>
 				</div>
