--- a/templates/basic.html
+++ b/templates/basic.html
@@ -19,6 +19,17 @@
 	<meta name="msapplication-navbutton-color" content="#000">
 	<meta name="apple-mobile-web-app-status-bar-style" content="#000">
     <style>
+        /* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
         .color-red{
             color: red;
             font-size: 13px;
@@ -34,6 +45,13 @@
             min-height: 0;
             height: 0;
         }
+        .bet-image{
+            font-size: 16px;
+            line-height: 1.4;
+            color: #1b1b1b;
+            text-decoration: underline;
+        }
+
     </style>
 </head>
 <body>
