--- a/templates/user/arhive.html
+++ b/templates/user/arhive.html
@@ -19,30 +19,32 @@
 								<div class="period-col">
 									<p>Период времени</p>
 									<div class="input-block">
-										<select name="text">
-											<option value="Текущий месяц">Текущий месяц</option>
-											<option value="Текущий месяц">Текущий месяц</option>
-											<option value="Текущий месяц">Текущий месяц</option>
-											<option value="Текущий месяц">Текущий месяц</option>
-											<option value="Текущий месяц">Текущий месяц</option>
+										<select name="time">
+											<option value="c_m">Текущий месяц</option>
+											<option value="l_m">Прошлый месяц</option>
+											<option value="all">За весь период</option>
+
 										</select>
 									</div>
 								</div>
 								<div class="period-col">
 									<p>Сумма операции</p>
 									<div class="input-block">
-										<select name="text">
-											<option value="Все суммы">Все суммы</option>
-											<option value="Все суммы">Все суммы</option>
-											<option value="Все суммы">Все суммы</option>
-											<option value="Все суммы">Все суммы</option>
-											<option value="Все суммы">Все суммы</option>
+										<select name="summ">
+											<option value="all">Все операции</option>
+											<option value="100">от 100 руб</option>
+											<option value="300">от 300 руб</option>
+											<option value="500">от 500 руб</option>
+											<option value="1000">от 1000 руб</option>
+											<option value="5000">от 5000 руб</option>
+											<option value="100000">от 100000 руб</option>
+
 										</select>
 									</div>
 								</div>
 								<div class="period-col">
 									<p></p>
-									<button class="main-btn">Применить</button>
+									<button type="submit" class="main-btn">Применить</button>
 								</div>
 							</div>
 						</form>
@@ -65,91 +67,29 @@
 								<span>Статус</span>
 							</div>
 						</div>
-						<div class="operations-row">
+						   {% for bet in allBets %}
+				    		<div class="operations-row">
 							<div class="operations-col operations-col__1">
-								<span>06.05.2020</span>
+								<span>{{ bet.created_at |date:'d.m.Y, H:i'}}</span>
 							</div>
 							<div class="operations-col operations-col__2">
-								<span>₽ 1000</span>
+							    <a href="{{ bet.image.url }}" target="_blank" class="bet-image"><span>₽ {{ bet.amount }}</span></a>
 							</div>
 							<div class="operations-col operations-col__3">
-								<span>2%</span>
+								<span>{{ bet.cashback }}%</span>
 							</div>
 							<div class="operations-col operations-col__4">
-								<span>₽ 20</span>
+								<span>₽ {{ bet.bet_result_amount }}</span>
 							</div>
 							<div class="operations-col operations-col__5">
-								<img src="img/check.svg" alt="">
+                                {% if bet.bet_result == True %}
+								    <img src="{% static 'img/check.svg' %}" alt="">
+                                {% elif bet.bet_result == False %}
+                                 	<img src="{% static 'img/close.svg' %}" alt="">
+                                {% endif %}
 							</div>
 						</div>
-						<div class="operations-row">
-							<div class="operations-col operations-col__1">
-								<span>06.05.2020</span>
-							</div>
-							<div class="operations-col operations-col__2">
-								<span>₽ 5000</span>
-							</div>
-							<div class="operations-col operations-col__3">
-								<span>2%</span>
-							</div>
-							<div class="operations-col operations-col__4">
-								<span>₽ 100</span>
-							</div>
-							<div class="operations-col operations-col__5">
-								<img src="img/close.svg" alt="">
-							</div>
-						</div>
-						<div class="operations-row">
-							<div class="operations-col operations-col__1">
-								<span>06.05.2020</span>
-							</div>
-							<div class="operations-col operations-col__2">
-								<span>₽ 1000</span>
-							</div>
-							<div class="operations-col operations-col__3">
-								<span>2%</span>
-							</div>
-							<div class="operations-col operations-col__4">
-								<span>₽ 20</span>
-							</div>
-							<div class="operations-col operations-col__5">
-								<img src="img/check.svg" alt="">
-							</div>
-						</div>
-						<div class="operations-row">
-							<div class="operations-col operations-col__1">
-								<span>06.05.2020</span>
-							</div>
-							<div class="operations-col operations-col__2">
-								<span>₽ 5000</span>
-							</div>
-							<div class="operations-col operations-col__3">
-								<span>2%</span>
-							</div>
-							<div class="operations-col operations-col__4">
-								<span>₽ 100</span>
-							</div>
-							<div class="operations-col operations-col__5">
-								<img src="img/close.svg" alt="">
-							</div>
-						</div>
-						<div class="operations-row">
-							<div class="operations-col operations-col__1">
-								<span>06.05.2020</span>
-							</div>
-							<div class="operations-col operations-col__2">
-								<span>₽ 1000</span>
-							</div>
-							<div class="operations-col operations-col__3">
-								<span>2%</span>
-							</div>
-							<div class="operations-col operations-col__4">
-								<span>₽ 20</span>
-							</div>
-							<div class="operations-col operations-col__5">
-								<img src="img/check.svg" alt="">
-							</div>
-						</div>
+					    {% endfor %}
 					</div>
 				</div>
 			</div>
