--- a/templates/user/profile_index.html
+++ b/templates/user/profile_index.html
@@ -19,8 +19,8 @@
 					<div class="income-info">
 						<p>Узнай подробнее, как зарабатывать на <b>UGS</b></p>
 						<div class="income-btns">
-							<a href="#" class="main-btn">Как заработать</a>
-							<a href="#" class="second-btn">Как потратить</a>
+							<a href="{% url 'index' %}#howWorks" class="main-btn">Как заработать</a>
+							<a href="{% url 'index' %}#howWorks" class="second-btn">Как потратить</a>
 						</div>
 					</div>
 				</div>
