--- a/templates/basic.html
+++ b/templates/basic.html
@@ -51,6 +51,10 @@ input[type=number] {
             color: #1b1b1b;
             text-decoration: underline;
         }
+        .btn-disabled{
+            opacity: .8;
+            pointer-events: none;
+        }
 
     </style>
 </head>
