--- a/templates/user/finances.html
+++ b/templates/user/finances.html
@@ -37,7 +37,7 @@
                                        value="Пополнение баланса пользователя {{ request.user.first_name }} {{ request.user.last_name }}">
                                 <input type="hidden" name="paymentType" value="AC">
                                 <input id="label_1" type="hidden" name="label" value="">
-                                <input type="hidden" name="successURL" value="http://ugscash.ru//user/profile/finance?pay_complete=!">
+                                <input type="hidden" name="successURL" value="https://ugscash.ru/user/profile/finance?pay_complete=!">
                                 <button type="submit" class="main-btn">оплатить</button>
                             </form>
 
